fix(borders): make spacing match dropdown

--- a/src/components/select-field/SelectField.scss
+++ b/src/components/select-field/SelectField.scss
@@ -55,7 +55,7 @@
 .bdl-SelectFieldDropdown {
     z-index: 4;
     min-width: 100%;
-    margin-top: $bdl-grid-unit;
+    margin-top: $bdl-grid-unit * 2;
     overflow-x: hidden;
     border-radius: $bdl-border-radius-size-med;
 }
