--- a/src/features/quick-search/QuickSearch.scss
+++ b/src/features/quick-search/QuickSearch.scss
@@ -12,7 +12,7 @@
     ul.overlay {
         @include bdl-transition($bdl-transitionDurationBase, transform);
 
-        margin-top: $bdl-grid-unit;
+        margin-top: $bdl-grid-unit * 2;
         padding: 0;
         overflow-x: hidden;
         overflow-y: auto;
